--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@ h1 {
     color: rgb(235, 203, 64);
     text-align: center;
     text-decoration: underline;
+    display: flex;
+    justify-content: center;
 }
 
 .friend { 
@@ -18,3 +20,6 @@ h1 {
     text-transform: uppercase;
 }
 
+.container { 
+    text-align: center;
+}
